# noros_rebuild

./: .gitignore  CMakeLists.txt  README.md
lib/DataStruct/: GlobalVariables.hpp  Structs.hpp
lib/Detector/: ArmorBox.hpp  ArmorDetector.hpp  ArmorSVM.hpp  Enums.hpp  PreProcess.hpp
lib/Guide/: Aiming.hpp  Monocular.hpp
lib/SerialCOM/: SerialCom.cpp  SerialCom.h
lib/camera/: hkvs_cam.hpp
lib/camera/hikvision/config/: camera_config.yaml
lib/camera/hikvision/include/: hikvision_camera.h
lib/camera/hikvision/src/: hikvision_camera.cpp
lib/configs/: cameraParams.xml  svm0528.xml
lib/libyaml/: libyaml-cpp.so.0.7.0
src/: CMakeLists.txt  main.cpp
